# n_e_s_vis

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: ci.yaml
application/: BUILD.bazel  CMakeLists.txt
application/src/: control.h  cpu_widget.cpp  cpu_widget.h  gui.h  log_widget.cpp  log_widget.h  main.cpp  memory_widget.h  nes.cpp  nes.h  nes_widget.cpp  nes_widget.h  ppu_helper.cpp  ppu_helper.h  ppu_widget.cpp  ppu_widget.h  screen.cpp  screen.h  simple_renderer.cpp  simple_renderer.h
extlibs/: BUILD.fmtlib  BUILD.imgui  BUILD.imgui-sfml  BUILD.sfml  CMakeLists.txt  no_undefined.bzl
extlibs/imgui/: CMakeLists.txt
extlibs/imgui-sfml/: CMakeLists.txt
extlibs/sfml/: CMakeLists.txt
