load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "nes_vis_app",
    srcs = glob([
        "src/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@fmtlib",
        "@imgui",
        "@imgui-sfml",
        "@nes//core",
        "@nes//disassembler",
        "@nes//nes",
        "@sfml//:sfml-graphics",
        "@sfml//:sfml-system",
        "@sfml//:sfml-window",
    ],
)
